# kernel

./: .appveyor.yml  .gitignore  .travis.yml  AlternateMakefile  Brewfile  Cargo.toml  LICENSE-MIT  Makefile  README.md  Vagrantfile  boot.asm  build.rs  deploy.sh  intermezzos.json  layout.ld  mac_install.sh  x86_64-unknown-intermezzos-gnu.json
3.1-headers/: Makefile
3.3-iso/: Makefile
3.4-qemu/: .gitignore
4.1-paging/: README.md
4.2-setting-up-a-gdt/: boot.asm
chapter_01/: README.md
chapter_02/: README.md
chapter_03/: README.md
chapter_03/3.1-headers/: multiboot_header.asm
chapter_03/3.2-hello-world/: .gitignore  Makefile  boot.asm
chapter_03/3.4-qemu/: Makefile
chapter_03/3.5-make/: Makefile
chapter_04/: README.md
chapter_04/4.1-paging/: Makefile  README.md  Vagrantfile  boot.asm
chapter_04/4.2-setting-up-a-gdt/: README.md  boot.asm
chapter_04/4.3-jumping-headlong-into-long-mode/: README.md  boot.asm
chapter_05/: AlternateMakefile  Makefile  x86_64-unknown-intermezzos-gnu.json
chapter_three/3.5-make/: multiboot_header.asm
console/: Cargo.toml
console/src/: lib.rs
console/tests/: vga.rs
docs/src/: SUMMARY.md  assembly.md  setup.md  tutorial.md  (+1 more)
interrupts/: Cargo.toml
keyboard/: Cargo.toml
kprintf/: Cargo.toml
pic/: Cargo.toml
serial/: Cargo.toml
src/: Cargo.toml  Makefile  README.md  build.rs  grub.cfg  lib.rs  main.rs  multiboot_header.asm  panic.rs  support.rs  x86_64-unknown-intermezzos-gnu.json  x86_64-unknown-nucleus-gnu.json
src/arch/x86_64/: boot.asm  grub.cfg  interrupt_handlers.asm  interrupt_table.asm  linker.ld  long_mode_init.asm
src/asm/: boot.S  boot.asm
src/docs/src/: welcome.md
src/interrupts/: Cargo.toml
src/interrupts/src/: lib.rs
src/kernel/: kdebug.rs  kprint.rs  mod.rs
src/kernel-context/: Cargo.toml
src/kernel-context/src/: lib.rs
src/keyboard/: Cargo.toml
src/keyboard/src/: lib.rs
src/pic/: Cargo.toml
src/pic/src/: lib.rs
src/ringbuffer/: Cargo.toml
src/ringbuffer/src/: lib.rs
src/src/: lib.rs  main.rs  support.rs
src/src/arch/x86_64/: boot.asm  grub.cfg  interrupt_handlers.asm  interrupt_table.asm  linker.ld  long_mode_init.asm
src/src/asm/: boot.asm  grub.cfg  interrupt_handlers.asm  linker.ld
src/src/kernel/: kprint.rs  mod.rs
src/vga/: Cargo.toml
src/vga/src/: color.rs  cursor.rs  lib.rs  print.rs
src/vga/tests/: vga.rs
vga/: Cargo.toml  README.md
(+9 files in other folders)
