[package]
name = "intermezzos"
version = "0.1.0"
authors = ["The intermezzOS team"]
build = "build.rs"

[workspace]

[dependencies]
lazy_static = { version = "0.2.1", features = ["spin_no_std"] }
rlibc = "1.0.0"
spin = "0.4.4"
x86 = "0.8.0"
console = { path = "console" }
interrupts = { path = "interrupts" }
pic = { path = "pic" }
keyboard = { path = "keyboard" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
