[package]
name = "intermezzos"
version = "0.1.0"
authors = ["steveklabnik <steve@steveklabnik.com>"]

[package.metadata.bootimage]
default-target = "intermezzos.json"

[workspace]

[dependencies]
rlibc = "1.0"

[dependencies.vga]
path = "vga"

[[bin]]
name = "intermezzos"
test = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
