[package]
name = "intermezzos"
version = "0.1.0"
authors = ["Steve Klabnik <steve@steveklabnik.com>", "Amit Aryeh Levy <amit@amitlevy.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0.0"
vga = { path = "vga" }
keyboard = { path = "keyboard" }
interrupts = { path = "interrupts" }
