[package]
name = "intermezzos"
version = "0.1.0"
authors = ["Steve Klabnik <steve@steveklabnik.com>", "Amit Aryeh Levy <amit@amitlevy.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0.0"
x86 = "0.7.0"
vga = { path = "vga" }
interrupts = { path = "interrupts" }
keyboard = { path = "keyboard" }
pic = { path = "pic" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
